apps/homelab/jellyfleet/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfleet
spec:
  selector:
    app.kubernetes.io/name: jellyfin
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8096
      targetPort: 8096
---
